--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sebastian Rindom <skrindom@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test" : "NODE_ENV",
+    "test": "NODE_ENV",
     "seed": "medusa seed -f ./data/seed.json",
     "build": "babel src -d dist --extensions \".ts,.js\"",
     "start": "medusa develop"
@@ -15,8 +15,8 @@
     "@medusajs/medusa-cli": "^1.3.3",
     "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.3",
-    "medusa-payment-manual": "^1.0.16",
-    "medusa-payment-stripe": "^1.1.45",
+    "medusa-payment-stripe": "^1.1.47",
+    "medusa-plugin-filestorage-local": "^0.1.2",
     "typeorm": "^0.2.36"
   },
   "repository": "https://github.com/medusajs/medusa-starter-default.git",
