--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "NODE_ENV",
     "seed": "medusa seed -f ./data/seed.json",
     "build": "babel src -d dist --extensions \".ts,.js\"",
-    "start": "medusa develop"
+    "start": "medusa develop -p 9001"
   },
   "dependencies": {
     "@medusajs/medusa": "^1.6.0",
